--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,4 +1,34 @@
-<label for="email">email</label>
+<h1>New Shizzle page</h1>
+<p>
+
+  <%= form_tag new_profile_path do %>
+    <p>Email: <br>
+    <%= email_field_tag :email %>
+    </p>
+    <p>UserName:<br>
+    <%= text_field_tag :username%>
+    </p>
+    <p>Pin:<br>
+    <%= text_field_tag :pin%>
+    </p>
+    <p>Website:<br>
+    <%= text_field_tag :website%>
+    </p>
+    <p>Address:<br>
+    <%= text_field_tag :address%>
+    </p>
+    <p>Alias:<br>
+    <%= text_field_tag :alias%>
+    </p>
+    <%= submit_tag %>
+  <% end %>
+
+</p>
+
+
+
+<!-- Use ERB to refactor this form and make it more DRY: -->
+<!-- <label for="email">email</label>
 <input type="text" name="email" id="email" class="fancy_form" >
 
 <label for="username">username</label>
@@ -14,4 +44,4 @@
 <input type="text" name="address" id="address" class="fancy_form" >
 
 <label for="alias">alias</label>
-<input type="text" name="alias" id="alias" class="fancy_form" >
+<input type="text" name="alias" id="alias" class="fancy_form" > -->
